--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ node_js:
   - "0.11"
   - "0.10"
 after_success:
-- ./node_modules/.bin/jscoverage lib lib-cov
-- ./node_modules/.bin/mocha test/**.js -R mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js
+- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive test
