--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ node_js:
   - "0.11"
   - "0.10"
 after_success:
-- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive test
+- ./node_modules/.bin/istanbul cover \
+  	./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive test && \
+  		cat ./coverage/lcov.info | ./bin/coveralls.js --verbose
