--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Collection of popular utilities",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec -u bdd --recursive test"
+    "test": "mocha -R spec -u bdd --recursive test",
+    "coveralls":"istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
