--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha -R spec -u bdd --recursive test/unit/  --report lcovonly -- test/unit/ -R spec --recursive",
     "cover": "istanbul cover -x '**/test/**' --include-all-sources node_modules/mocha/bin/_mocha  -- test/unit/ -R spec --recursive",
-    "coveralls": "istanbul cover node_modules/mocha/bin/_mocha -x '**/test/**' --report lcovonly -- test/unit/ -R spec --recursive && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- test/unit/ -R spec --recursive && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
