--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Collection of popular utilities",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec -u bdd --recursive test/unit/  --report lcovonly -- test/unit/ -R spec --recursive",
+    "test": "mocha -R spec -u bdd --recursive test/unit/  -R spec --recursive",
     "cover": "istanbul cover -x '**/test/**' --include-all-sources node_modules/mocha/bin/_mocha  -- test/unit/ -R spec --recursive",
     "coveralls": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly test/unit/ -R spec --recursive && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
